<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home" />
    <item android:id="@+id/recommendationFragment"
        android:icon="@drawable/ic_recommendation"
        android:title="@string/label_recommendation" />
    <item android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/label_favorite" />
</menu>