<resources>
    <string name="app_name">First News</string>
    <string name="desc_save">Save</string>
    <string name="format_footer">%1$s - %2$s</string>
    <string name="hint_search">Search</string>
    <string name="label_comment">Comment</string>
    <string name="label_search_news">Search News</string>
    <string name="title_recommendation_for_you">Recommendation For You</string>
    <string name="label_home">Home</string>
    <string name="label_recommendation">Recommendation</string>
    <string name="label_saved">Saved</string>
    <string name="label_see_all">See All</string>
    <string name="desc_share">Share</string>
    <string name="send_to">Sent to</string>
    <string name="label_error_load_news">There is some problem!</string>
    <string name="label_try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_favorite_fragment">Your Favorite News</string>
    <string name="desc_btn_see_all_news_horizontal">Btn See All News Horizontal</string>
    <string name="label_empty_favorite_news">There is not favorite news</string>
</resources>